newEvent redirects to new event's page, change user profile for fb login

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 	<div class="containerIndex">
 		<div id="welcome">
             <br>
-            <p class="p4">Welcome, User</p>
+            <p class="p4">Welcome, <span id="name">User</span></p>
 	    </div>
 		<!--This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> -->
         <div class="contentBorder" id="mypets">
@@ -140,6 +140,7 @@
 	
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/facebook.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
 </script>
 </body>
