--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="msgcontainer darker">
-  		<img src="images/gigachad.jpg" alt="Avatar" class="right">
+  		<img src="images/gigachad.jpg" alt="Avatar" class="right" id="photo">
   		<p>Hey! Of course, see you there next week?</p>
   		<span class="time-left">11:01</span>
 		</div>
@@ -46,7 +46,7 @@
 		</div>
 
 		<div class="msgcontainer darker">
-  		<img src="images/gigachad.jpg" alt="Avatar" class="right">
+  		<img src="images/gigachad.jpg" alt="Avatar" class="right" id="photo">
   		<p>I'm so glad I got this app.</p>
   		<span class="time-left">11:05</span>
 		</div>
@@ -95,6 +95,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/facebook.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
 </script>
 </body>
