--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -33,8 +33,8 @@
       </a> -->
     <div class="container">
     <div class="contentBorder" id="avatar">
-    <img src="images/gigachad.jpg" alt="logo" class="pic-center">
-    <p class="p4">User122</p>
+    <img id="photo" src="images/gigachad.jpg" alt="logo" class="pic-center">
+    <p class="p4" id="name">User122</p>
   </div>
   <div class="container">
   		<p class="p6">Change Profile Picture</p>
@@ -79,6 +79,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/facebook.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
 </script>
 </body>
