--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -45,7 +45,7 @@
         <div class="submitBtn">
             <button class="btn" onclick="viewEvent()" id="getDataBtn" type="submit">Create new event</button>
             {{!-- <button class="btn" id="getDataBtn" onclick="viewEvent()" type="submit">Create new event</button> --}}
-            <div class="alert alert-primary" role="alert"> This event is created! View your <a href="/results" class="alert-link"> events</a>.</div>
+            {{!-- <div class="alert alert-primary" role="alert"> This event is created! View your <a href="/results" class="alert-link"> events</a>.</div> --}}
         </div>
         <!-- <a role="button"  href="results">Create new event</a> -->
         </form>
