fixed back buttons and logout

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -233,3 +233,11 @@ body {
     width: 80%;
     height: auto;
 }
+
+#profileContainer {
+    text-align: center;
+}
+
+.logoutBtn {
+    background: red;
+}
