--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,7 @@
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
+                {{!-- <a role="button" class="btn logoutBtn" href="../">Logout</a> --}}
 				<a href="/"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
