--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -15,7 +15,7 @@
     <div class="topBar fixed-top" >
         <div class="row">
             <div class="col">
-                <a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a>
+                {{!-- <a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a> --}}
             </div>
             <div class="col-8">
                 <h4>Messages</h4>
