--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -16,7 +16,7 @@
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a>
+				{{!-- <a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a> --}}
 			</div>
 			<div class="col-8">
 				<h4>Create New Event</h4>
@@ -47,7 +47,6 @@
             {{!-- <button class="btn" id="getDataBtn" onclick="viewEvent()" type="submit">Create new event</button> --}}
             {{!-- <div class="alert alert-primary" role="alert"> This event is created! View your <a href="/results" class="alert-link"> events</a>.</div> --}}
         </div>
-        <!-- <a role="button"  href="results">Create new event</a> -->
         </form>
     </div>
 
