--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -15,7 +15,7 @@
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a>
+				{{!-- <a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a> --}}
 			</div>
 			<div class="col-8">
 				<h4>Profile</h4>
@@ -25,21 +25,17 @@
 			</div>
 		</div>
 	</div>
- 	<!-- <h4>links</h4>
-    <div id="project1">
-      <a href="index2.html">
-         This is a comment <img src="images/83401061_598130577414441_7838613489009557504_o.jpeg" width="600" height="400" alt="S win image"> 
-        <p>Sustain-A-Thon</p>
-      </a> -->
+
     <div class="container">
-    <div class="contentBorder" id="avatar">
-    <img id="photo" src="images/gigachad.jpg" alt="logo" class="pic-center">
-    <p class="p4" id="name">User122</p>
-  </div>
-  <div class="container">
+        <div class="contentBorder" id="avatar">
+        <img id="photo" src="images/gigachad.jpg" alt="logo" class="pic-center">
+        <p class="p4" id="name">User122</p>
+    </div>
+    <div class="container" id="profileContainer">
   		<p class="p6">Change Profile Picture</p>
         <p class="p6">Change Privacy Settings</p>
         <p class="p6">Change Password</p>
+        <a role="button" class="btn logoutBtn" href="../">Logout</a>
    </div>
 </div>
 
