--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -15,21 +15,11 @@
     <title>Search</title>
   </head>
   <body>
-    <!-- <nav class="navbar navbar-light bg-light">
-        chevron arrow
-        <a class="navbar-brand" href="../views/index.handlebars">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-            </svg>
-            Search
-        </a>
-    </nav> -->
-    
     <!-- top nav -->
     <div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a>
+				{{!-- <a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a> --}}
 			</div>
 			<div class="col-8">
 				<h4>Search</h4>
