--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,10 +77,11 @@ body {
 }
 
 .p4 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", monospace;
   font-size:30px;
   color:black;
   text-align: center;
+  font-weight: bold;
 }
 
 .p5 {
@@ -97,21 +98,21 @@ body {
 }
 
 .p7 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", monospace;
   color:black;
   text-align: left;
   font-size:15px;
 }
 
 .p8 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", monospace;
   color:black;
   text-align: center;
   font-size:15px;
 }
 
 .p9 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", monospace;
   color:black;
   text-align: center;
   font-size:15px;
