--- a/public/css/newEvent.css
+++ b/public/css/newEvent.css
@@ -77,7 +77,7 @@ body {
 }
 
 .p4 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   font-size:30px;
   color:black;
   text-align: center;
@@ -97,21 +97,21 @@ body {
 }
 
 .p7 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: left;
   font-size:15px;
 }
 
 .p8 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: center;
   font-size:15px;
 }
 
 .p9 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: center;
   font-size:15px;
