--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Test Home Page</title>
+	<title>Home Page</title>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -67,7 +67,7 @@
 	                            <p class="card-text">@{{location}}</p>	
 	                        </div>
 	                        <div class="card-button">
-	                            <a href="blankEvent/{{eventName}}" class="btn btn-go">Go!</a>
+	                            <a href="blankEvent/{{eventName}}" class="btn btn-go go-btn">Go!</a>
 	                        </div>
 	                    </div>
 	                </div>
