--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -109,7 +109,7 @@
             <!--submit-->
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <a href="results" class="btn btn-secondary" role="button">Go!</a>
+                    <a href="results" class="btn btn-secondary go-btn" role="button">Go!</a>
                 </div>
             </div>
         </form>
