--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,14 +6,14 @@ body {
 }
 
 .topBar {
-    background-color: rgb(228, 228, 228);
+    background-color: #8dbbf2;
     align-items: center;
     padding: 10px;
 }
 
 .topBar img, .topBar h4 {
     display: block;
-    color: #000000;
+    color: white;
     text-align: center;
     text-decoration: none;
 }
@@ -31,7 +31,7 @@ body {
 .mynavbar {
     text-align: center;
     overflow: hidden;
-    background-color: rgb(228, 228, 228);
+    background-color: #8dbbf2;
     position:fixed;
     bottom: 0;
     width: 100%;
@@ -39,7 +39,7 @@ body {
 }
 
 .mynavbar a {
-    color: #000000;
+    color: #fefdff;
     text-align: center;
     padding: 10px;
     text-decoration: none;
@@ -77,7 +77,7 @@ body {
 }
 
 .p4 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", monospace;
   font-size:30px;
   color:black;
   text-align: center;
@@ -97,21 +97,21 @@ body {
 }
 
 .p7 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: left;
   font-size:15px;
 }
 
 .p8 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: center;
   font-size:15px;
 }
 
 .p9 {
-  font-family: "Brush Script M7", "Lucida Handwriting", cursive;
+  font-family: "Lucida Console", "Courier New", cursive;
   color:black;
   text-align: center;
   font-size:15px;
@@ -135,7 +135,8 @@ body {
 
 .contentBorder {
     border-radius: 25px;
-    border: 2px solid #b3b3b3;
+    border: 2px solid #facedf;
+    background-color: rgb(255, 239, 243);
     padding: 10px;
     height: auto;
 }
@@ -158,10 +159,14 @@ body {
 }
 
 .btn, .selectpicker{
-    background-color:rgb(187, 187, 187);
-    color: white;
+    background-color:#d8dde9;
+    color: black;
 }
 
+.go-btn, #searchEventBtn {
+    background-color: #d9aa6b;
+    border-color: #d9aa6b;
+}
 /* card stuff */
 
 .resultsCards {
@@ -172,6 +177,8 @@ body {
 
 .card {
     margin-top: 5px;
+    background-color: rgb(255, 239, 243);
+    border-color: #c68f94;
 }
 
 .card-thumbnail {
@@ -239,5 +246,5 @@ body {
 }
 
 .logoutBtn {
-    background: red;
+    background: #d9aa6b;
 }
