--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -36,8 +36,8 @@
         <input type="file" class="form-control" placeholder="image upload" name="image">
         <input type="text" class="form-control" placeholder="Event name*" name="eventName" required>
         <input type="text" class="form-control" placeholder="event type*" name="eventType" required>
-        <input type="text" class="form-control" placeholder="pet type" name="petType">
-        <input type="text" class="form-control" placeholder="breed" name="breed">
+        <input type="text" class="form-control" placeholder="pet type*" name="petType" required>
+        <input type="text" class="form-control" placeholder="breed*" name="breed" required>
         <input type="time" class="form-control" placeholder="time*" name="time" required>
         <input type="text" class="form-control" placeholder="location*" name="location" required> 
         <input type="text" class="form-control" placeholder="description*" name="description" required>
