--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -31,11 +31,11 @@
 	</div>
 
 	<div class="container">
-        <form>
+        <form id="eventSearch" role="form" method="get" action="/results">
             <!--search event name-->
             <div class="form-group">
                 <label class="sr-only" for="eventName">Event Name</label>
-                    <input type="text" class="form-control" placeholder="Event name (optional)">
+                    <input name="eventName" type="text" class="form-control" placeholder="Event name (optional)">
             </div>
 
             <!--location-->
@@ -55,38 +55,39 @@
             
             <!--event-->
             <div class="form-group row">
-                <label for="event" class="col-sm-2 col-form-label">Event</label>
+                <label for="event" class="col-sm-2 col-form-label">Event*</label>
                 <div class="col-sm-10">
-                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" id="event">
-                        <option value="adoptions">Adoptions</option> 
-                        <option value="meetups">Meetups</option> 
-                        <option value="classes">Classes</option>
-                        <option value="fundraising">Fundraising</option>
-                        <option value="otherEvent">Other</option>
+                    <select name="eventType" class="selectpicker dropdown-menu-right form-control" data-actions-box="true" id="eventType" required>
+                        <option value="" hidden>None</option>
+                        <option value="Adoption">Adoptions</option> 
+                        <option value="Meetup">Meetups</option> 
+                        <option value="Class">Classes</option>
+                        <option value="Fundraising">Fundraising</option>
+                        <option value="Other">Other</option>
                     </select>
                 </div>
             </div>
 
             <!--pet type-->
             <div class="form-group row">
-                <label for="petType" class="col-sm-2 col-form-label">Pet Type</label>
+                <label for="petType" class="col-sm-2 col-form-label">Pet Type*</label>
                 <div class="col-sm-10">
-                    <select class="selectpicker dropdown-menu-right form-control" id="petType">
+                    <select name="petType" class="selectpicker dropdown-menu-right form-control" id="petType" required>
                         <option value="" hidden>None</option>
-                        <option value="dogs">Dogs</option> 
-                        <option value="cats">Cats</option> 
-                        <option value="critters">Critters</option>
-                        <option value="reptiles">Reptiles</option>
-                        <option value="otherPet">Other</option>
+                        <option value="Dog">Dogs</option> 
+                        <option value="Cat">Cats</option> 
+                        <option value="Critter">Critters</option>
+                        <option value="Reptile">Reptiles</option>
+                        <option value="Other">Other</option>
                     </select>
                 </div>
             </div>
 
             <!--dog breeds-->
             <div class="form-group row" id="dogBreedDiv">
-                <label for="dogBreed" class="col-sm-2 col-form-label">Breed</label>
+                <label for="breed" class="col-sm-2 col-form-label">Breed</label>
                 <div class="col-sm-10">
-                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" data-live-search="true" id="dogBreed" title="Pick a breed" data-size="5">
+                    <select name="dogBreed" class="selectpicker dropdown-menu-right form-control" data-live-search="true" id="dogBreed" title="Pick a breed" data-size="5">
                         {{#each dogs}}
                         <option value="{{this}}">{{this}}</option>
                         {{/each}}
@@ -98,7 +99,7 @@
             <div class="form-group row" id="catBreedDiv">
                 <label for="catBreed" class="col-sm-2 col-form-label">Breed</label>
                 <div class="col-sm-10">
-                    <select class="selectpicker dropdown-menu-right form-control" multiple data-actions-box="true" data-live-search="true" id="catBreed" title="Pick a breed" data-size="5">
+                    <select name="catBreed" class="selectpicker dropdown-menu-right form-control" data-live-search="true" id="catBreed" title="Pick a breed" data-size="5">
                         {{#each cats}}
                         <option value="{{this}}">{{this}}</option>
                         {{/each}}
@@ -109,7 +110,7 @@
             <!--submit-->
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <a href="results" class="btn btn-secondary go-btn" role="button">Go!</a>
+                    <input type="submit" class="btn btn-secondary go-btn"></input>
                 </div>
             </div>
         </form>
