--- a/views/blankEvent.handlebars
+++ b/views/blankEvent.handlebars
@@ -15,13 +15,13 @@
     <div class="topBar fixed-top" >
         <div class="row">
             <div class="col">
-                <a href="javascript:history.back()"><img src="/images/backButton.png" class="topIcons"></a>
+                <a href="../index"><img src="/images/backButton.png" class="topIcons"></a>
             </div>
             <div class="col-8">
                 <h4>Event</h4>
             </div>
             <div class="col">
-                <a href="help"><img src="/images/infoButton.png" class="topIcons" id="infoButton"></a>
+                <a href="../help"><img src="/images/infoButton.png" class="topIcons" id="infoButton"></a>
             </div>
         </div>
     </div>
