--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,7 +22,7 @@
 				<h4>Login</h4>
 			</div>
 			<div class="col">
-				<a href="help"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a>
+				{{!-- <a href="help"><img src="images/infoButton.png" class="topIcons" id="infoButton"></a> --}}
 			</div>
 		</div>
 	</div>
