changed options to singular instad of plural

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -59,9 +59,9 @@
                 <div class="col-sm-10">
                     <select name="eventType" class="selectpicker dropdown-menu-right form-control" data-actions-box="true" id="eventType" required>
                         <option value="" hidden>None</option>
-                        <option value="Adoption">Adoptions</option> 
-                        <option value="Meetup">Meetups</option> 
-                        <option value="Class">Classes</option>
+                        <option value="Adoption">Adoption</option> 
+                        <option value="Meetup">Meetup</option> 
+                        <option value="Class">Class</option>
                         <option value="Fundraising">Fundraising</option>
                         <option value="Other">Other</option>
                     </select>
@@ -74,10 +74,10 @@
                 <div class="col-sm-10">
                     <select name="petType" class="selectpicker dropdown-menu-right form-control" id="petType" required>
                         <option value="" hidden>None</option>
-                        <option value="Dog">Dogs</option> 
-                        <option value="Cat">Cats</option> 
-                        <option value="Critter">Critters</option>
-                        <option value="Reptile">Reptiles</option>
+                        <option value="Dog">Dog</option> 
+                        <option value="Cat">Cat</option> 
+                        <option value="Critter">Critter</option>
+                        <option value="Reptile">Reptile</option>
                         <option value="Other">Other</option>
                     </select>
                 </div>
