--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -40,7 +40,7 @@
 	<!-- replace with JSON? -->
 	<div class="resultsCards">
         {{#each events}}
-            <div class="card filterDiv {{sortBy}}">
+            <div class="card shadow-sm filterDiv {{sortBy}}">
                 <div class="card-body">
                     <div class="row card-elements">
                         <div class="card-thumbnail">
