--- a/public/css/newEvent.css
+++ b/public/css/newEvent.css
@@ -6,14 +6,14 @@ body {
 }
 
 .topBar {
-    background-color: rgb(228, 228, 228);
+    background-color: #8dbbf2;
     align-items: center;
     padding: 10px;
 }
 
 .topBar img, .topBar h4 {
     display: block;
-    color: #000000;
+    color: white;
     text-align: center;
     text-decoration: none;
 }
@@ -72,40 +72,40 @@ body {
 .p3 {
   font-family: "Lucida Console", "Courier New", monospace;
   /*font-size:16px; */
-  color:black;
+  color: #434343;
   text-align: center;
 }
 
 .p4 {
   font-family: "Lucida Console", "Courier New", cursive;
   font-size:30px;
-  color:black;
+  color: #434343;
   text-align: center;
 }
 
 .p5 {
   font-family: "Copperplate", "Papyrus", fantasy;
-  color:black;
+  color: #434343;
   text-align: center;
 }
 
 .p6 {
   font-family: "Lucida Console", "Courier New", monospace;
   /*font-size:20px; */
-  color:black;
+  color: #434343;
   text-align: center;
 }
 
 .p7 {
   font-family: "Lucida Console", "Courier New", cursive;
-  color:black;
+  color: #434343;
   text-align: left;
   font-size:15px;
 }
 
 .p8 {
   font-family: "Lucida Console", "Courier New", monospace;
-  color:black;
+  color: #434343;
   text-align: center;
   font-size:20px;
   font-weight: bold;
@@ -113,14 +113,14 @@ body {
 
 .p9 {
   font-family: "Lucida Console", "Courier New", cursive;
-  color:black;
+  color: #434343;
   text-align: center;
   font-size:15px;
 }
 
 .p10 {
   font-family: "Brush Script M7", "Lucida Handwriting", cursive;
-  color:black;
+  color: #434343;
   text-align: right;
   font-size:15px;
 }
