--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
 			<p class="p7">I'm attending:</p>
 			{{#each events}}
 			{{#if attending}}
-	            <div class="card">
+	            <div class="card shadow-sm">
 	                <div class="card-body">
 	                    <div class="row card-elements">
 	                        <div class="card-thumbnail">
