--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -63,7 +63,7 @@
 	                            <p class="card-text">@{{location}}</p>	
 	                        </div>
 	                        <div class="card-button">
-	                            <a href="blankEvent/{{eventName}}" class="btn btn-go go-btn">Go!</a>
+	                            <a href="blankEvent/{{id}}" class="btn btn-go go-btn">Go!</a>
 	                        </div>
 	                    </div>
 	                </div>
