--- a/views/blankEvent.handlebars
+++ b/views/blankEvent.handlebars
@@ -15,7 +15,7 @@
     <div class="topBar fixed-top" >
         <div class="row">
             <div class="col">
-                <a href="../index"><img src="/images/backButton.png" class="topIcons"></a>
+                <a href="../results"><img src="/images/backButton.png" class="topIcons"></a>
             </div>
             <div class="col-8">
                 <h4>Event</h4>
@@ -54,6 +54,7 @@
             </p>
 		  </label>
 		</div>
+
         <div class="alert alert-primary" role="alert">
             This event is saved! View your <a href="../index" class="alert-link">saved events</a>.
         </div>
