--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -15,7 +15,7 @@
 	<div class="topBar fixed-top" >
 		<div class="row">
 			<div class="col">
-				<a href="javascript:history.back()"><img src="images/backButton.png" class="topIcons"></a>
+				<a href="search"><img src="images/backButton.png" class="topIcons"></a>
 			</div>
 			<div class="col-8">
 				<h4>Results</h4>
@@ -26,7 +26,7 @@
 		</div>
 	</div>
 	<div class="sortFilter" id="myBtnContainer">
-        <div class="form-group row">
+        {{!-- <div class="form-group row">
             <label for="time" class="col-sm-2 col-form-label">Sort by within:</label>
             <div class="col-sm-10">
                 <select class="selectpicker dropdown-menu-right form-control" id="time" title="Select...">
@@ -35,7 +35,7 @@
                     <option class="btn" onclick="filterSelection('nextMonth')">The next week</option>
                 </select>
             </div>
-        </div>
+        </div> --}}
 	</div>
 	<!-- replace with JSON? -->
 	<div class="resultsCards">
