--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,22 +31,9 @@
             <br>
             <p class="p4">Welcome, <span id="name">User</span></p>
 	    </div>
-        <div class="contentBorder" id="mypets">
-            <p class="p7">My pets:</p>
-            <div class="row">
-                <div class="column petColumn">
-                    <img src="images/popcorn.jpg" alt="logo" title="Popcorn" style="width:70%">
-                    <p class="p8 petName">Popcorn</p>
-                </div>
-                <div class="column petColumn">
-                    <img src="images/maya.jpg" alt="logo" title="Maya" style="width:70%">
-                    <p class="p8 petName">Maya</p>
-                </div>
-            </div> 
-        </div>
 	    <br>
 		<div class="contentBorder" id="Attending">
-			<p class="p7">I'm attending:</p>
+			<p class="p7"><b>I'm attending:</b></p>
 			{{#each events}}
 			{{#if attending}}
 	            <div class="card shadow-sm">
@@ -70,8 +57,23 @@
 	            </div>
 	        {{/if}}
             {{/each}}
-            <a role="button" class="btn" id="searchEventBtn" href="search">Search for events?</a>
+            <a role="button" class="btn" id="searchEventBtn" href="search">Search for events</a>
 		</div>
+        <br>
+        <div class="contentBorder" id="mypets">
+            <p class="p7"><b>My pets:</b></p>
+            <div class="row">
+                <div class="column petColumn">
+                    <img src="images/popcorn.jpg" alt="logo" title="Popcorn" style="width:70%">
+                    <p class="p8 petName">Popcorn</p>
+                </div>
+                <div class="column petColumn">
+                    <img src="images/maya.jpg" alt="logo" title="Maya" style="width:70%">
+                    <p class="p8 petName">Maya</p>
+                </div>
+            </div> 
+            <a role="button" class="btn" id="searchEventBtn" href="profile">View profiles</a>
+        </div>
   	</div>
       
 	<!-- bottom nav -->
