--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -26,17 +26,38 @@
 		</div>
 	</div>
 
-    <div class="container">
+    <div class="containerIndex">
         <div class="contentBorder" id="avatar">
         <img id="photo" src="images/gigachad.jpg" alt="logo" class="pic-center">
         <p class="p4" id="name">User122</p>
-    </div>
-    <div class="container" id="profileContainer">
-  		<p class="p6">Change Profile Picture</p>
-        <p class="p6">Change Privacy Settings</p>
-        <p class="p6">Change Password</p>
+        {{!-- <div class="container" id="profileContainer">
+            <p class="p6">Change Profile Picture</p>
+            <p class="p6">Change Privacy Settings</p>
+            <p class="p6">Change Password</p>
+        </div> --}}
+        <div id="profilepets">
+            <p class="p7"><b>My pets:</b></p>
+            <div class="row">
+                <div class="column">
+                    <img src="images/popcorn.jpg" alt="logo" title="Popcorn" style="width:70%">
+                    <p class="p8 petName"><b>Popcorn</b></p>
+                </div>
+                <div class="column">
+                    <p class="p8">A chill, laid-back boi :)</p>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="column petColumn">
+                    <img src="images/maya.jpg" alt="logo" title="Maya" style="width:70%">
+                    <p class="p8 petName"><b>Maya</b></p>
+                </div>
+                <div class="column">
+                    <p class="p8">A sweet and affectionate little buddy!</p>
+                </div>
+            </div>
+        </div>
         <a role="button" class="btn logoutBtn" href="../">Logout</a>
-   </div>
+    </div>
 </div>
 
     <!-- bottom nav -->
