--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -39,7 +39,7 @@
             </div>
 
             <!--location-->
-            <div class="form-group row">
+            {{!-- <div class="form-group row">
                 <label for="location" class="col-sm-2 col-form-label">Location</label>
                 <div class="col-sm-10">
             		<select class="selectpicker dropdown-menu-right form-control" id="location" title="Select...">
@@ -51,7 +51,7 @@
                 	</select>
                     <input type="text" class="form-control" placeholder="City, State, Zip Code">
                 </div>
-            </div>
+            </div> --}}
             
             <!--event-->
             <div class="form-group row">
