--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -81,20 +81,29 @@ body {
     padding-right:10px;
 }
 .macro{
-    margin-top:5px;width:85%;border-radius:5px;padding:5px;display:flex;
+    margin-top:5px;width:100%;border-radius:5px;padding:5px;display:flex;
 }
 .msj-rta{
-    float:right;background:whitesmoke;
+    float:right;background:#fce5cd;
 }
 .msj{
-    float:left;background:white;
+    float:left;background:rgb(196, 196, 196);
 }
+
+.msggg{
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
 .frame{
-    background:#e0e0de;
-    height:450px;
+    background: white;
     overflow:hidden;
+    height: 86%;
     padding:0;
 }
+
+
+
 .frame > div:last-of-type{
     position:absolute;bottom:0;width:100%;display:flex;
 }
@@ -124,7 +133,7 @@ ul {
     position:relative;
     border-style: solid;
     border-width: 0 13px 13px 0;
-    border-color: transparent #ffffff transparent transparent;            
+    border-color: transparent rgb(196, 196, 196) transparent transparent;            
 }
 .msj-rta:after{
     width: 0;
@@ -135,20 +144,20 @@ ul {
     position:relative;
     border-style: solid;
     border-width: 13px 13px 0 0;
-    border-color: whitesmoke transparent transparent transparent;           
+    border-color: #fce5cd transparent transparent transparent;           
 }  
 input:focus{
     outline: none;
 }        
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: #d4d4d4;
+    color: rgb(196, 196, 196);
 }
 ::-moz-placeholder { /* Firefox 19+ */
-    color: #d4d4d4;
+    color: rgb(196, 196, 196);
 }
 :-ms-input-placeholder { /* IE 10+ */
-    color: #d4d4d4;
+    color: rgb(196, 196, 196);
 }
 :-moz-placeholder { /* Firefox 18- */
-    color: #d4d4d4;
+    color: rgb(196, 196, 196);
 }
