--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -7,6 +7,7 @@
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/messages.css">
@@ -27,22 +28,22 @@
         </div>
     </div>
     <!-- message history -->
-
+    <div class ="msggg">
      	<div class="col-sm-3 col-sm-offset-4 frame">
             <ul></ul>
             <div>
-                <div class="msj-rta macro">                        
+                <div class="msj macro">                        
                     <div class="text text-r" style="background:whitesmoke !important">
                         <input class="mytext" placeholder="Type a message"/>
                     </div> 
 
                 </div>
-                <div style="padding:10px;">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                </div>                
+                <!-- <div style="padding:10px;">
+                    <i class="far fa-paper-plane"></i>
+                </div> -->               
             </div>
         </div>      
-
+    </div>
     <!-- bottom nav -->
 	<div class="mynavbar">
 		<!--home-->
