uncommented out css

--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -33,6 +33,8 @@
 	</div>
    <div class="container">
         <p class="p8">Give event details</p>
+   </div>
+   <div class="containerEvent">
         <form id="createEvent" method="get" action="/addEvent">
         	<!--image-->
         	<label for="image" hidden><b>Image</b></label>
