--- a/public/css/newEvent.css
+++ b/public/css/newEvent.css
@@ -222,12 +222,12 @@ body {
     height: auto;
 }
 
-/*.containerEvent{
+.containerEvent{
     margin-left: 7%;
     margin-right: 7%;
     margin-bottom: 80px;
     text-align: center;
-}*/
+}
 
 .form-control {
     margin-bottom: 2%;
