--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -81,7 +81,7 @@ body {
     padding-right:10px;
 }
 .macro{
-    margin-top:5px;width:100%;border-radius:5px;padding:5px;display:flex;
+    margin-top:1%;margin-bottom:3%;width:100%;border-radius:1%;padding:1%;display:flex;
 }
 .msj-rta{
     float:right;background:#fce5cd;
