create event uses dummy images, added your create events to profile, fixed more search/results bugs

--- a/public/css/newEvent.css
+++ b/public/css/newEvent.css
@@ -226,7 +226,7 @@ body {
     margin-left: 7%;
     margin-right: 7%;
     margin-bottom: 80px;
-    text-align: center;
+    text-align: left;
 }
 
 .form-control {
