--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>page 4</title>
+	<title>Profile</title>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -58,6 +58,34 @@
         </div>
         <a role="button" class="btn logoutBtn" href="../">Logout</a>
     </div>
+    <br>
+    <div class="contentBorder" id="avatar">
+			<p class="p7"><b>Your created events:</b></p>
+			{{#each events}}
+			{{#if yours}}
+	            <div class="card shadow-sm">
+	                <div class="card-body">
+	                    <div class="row card-elements">
+	                        <div class="card-thumbnail">
+	                            <img class="card-img" src="images/{{image}}"> 
+	                        </div>
+	                        <div class="card-description">
+	                            <h5 class="card-title">{{eventName}}</h5>
+	                            <h6>[{{petType}}: {{breed}}]</h6>
+	                            <p class="card-text">{{eventType}} Event</p>
+	                            <p class="card-text">{{time}}</p>
+	                            <p class="card-text">@{{location}}</p>	
+	                        </div>
+	                        <div class="card-button">
+	                            <a href="blankEvent/{{id}}" class="btn btn-go go-btn">Go!</a>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+	        {{/if}}
+            {{/each}}
+            <a role="button" class="btn" id="searchEventBtn" href="newEvent">Create an event</a>
+		</div>
 </div>
 
     <!-- bottom nav -->
