--- a/views/messages.handlebars
+++ b/views/messages.handlebars
@@ -80,6 +80,7 @@
 
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+    <script src="js/facebook.js"></script>
 	<script src="js/messages.js"></script>
 	<script id="handlebars-demo" type="text/x-handlebars-template">
 </script>
