--- a/views/blankEvent.handlebars
+++ b/views/blankEvent.handlebars
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container blankEventBtm">
         <h2 id="eventName">{{eventName}}</h2>
         <div class="row">
             <div class="column">
