--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -46,7 +46,7 @@
 
 		    <!--event type-->
 	        <div class="form-group row">
-                <label for="event" class="col-sm-2 col-form-label">Event*</label>
+                <label for="event" class="col-sm-2 col-form-label formHeight">Event*</label>
                 <div class="col-sm-10">
                     <select name="eventType" class="selectpicker dropdown-menu-right form-control" data-actions-box="true" id="eventType" required>
                         <option value="" hidden>None</option>
@@ -61,7 +61,7 @@
 
         	<!--pet type-->
             <div class="form-group row">
-                <label for="petType" class="col-sm-2 col-form-label">Pet Type*</label>
+                <label for="petType" class="col-sm-2 col-form-label formHeight">Pet Type*</label>
                 <div class="col-sm-10">
                     <select name="petType" class="selectpicker dropdown-menu-right form-control" id="petType" required>
                         <option value="" hidden>None</option>
