--- a/views/newEvent.handlebars
+++ b/views/newEvent.handlebars
@@ -46,8 +46,8 @@
 
 		    <!--event type-->
 	        <div class="form-group row">
-                <label for="event" class="col-sm-2 col-form-label formHeight">Event*</label>
-                <div class="col-sm-10">
+                <label for="event" class="col-sm-2 col-form-label">Event*</label>
+                <div class="col-sm-10 formHeight">
                     <select name="eventType" class="selectpicker dropdown-menu-right form-control" data-actions-box="true" id="eventType" required>
                         <option value="" hidden>None</option>
                         <option value="Adoption">Adoption</option> 
@@ -61,8 +61,8 @@
 
         	<!--pet type-->
             <div class="form-group row">
-                <label for="petType" class="col-sm-2 col-form-label formHeight">Pet Type*</label>
-                <div class="col-sm-10">
+                <label for="petType" class="col-sm-2 col-form-label">Pet Type*</label>
+                <div class="col-sm-10 formHeight">
                     <select name="petType" class="selectpicker dropdown-menu-right form-control" id="petType" required>
                         <option value="" hidden>None</option>
                         <option value="Dog">Dog</option> 
